--- a/styles/index.css
+++ b/styles/index.css
@@ -19,7 +19,7 @@ header{
     background-image: url(../resources/title-background.png);
     background-size: 50% 100%;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position-x: 45%;
     width: 100%;
     height: 100%;
     display: flex;
