--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    overflow-y: none;
     font-family: 'Gugi', cursive;
 }
 a{
@@ -9,39 +10,30 @@ a{
 header{
     display: flex;
     align-items: center;
-    background-image: url(../resources/giphs/header-giph.gif);
     background-size: contain;
-    color: white;
     font-family: 'Tangerine', cursive;
+    color: white;
     height: 3vw;
+    background-image: url(../resources/giphs/header-giph.gif);
 }
 .title_container {
-    background-image: url(../resources/title-background.png);
-    background-repeat: no-repeat;
-    background-position-x: 45%;
-    background-size: 50% 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-size: 50% 100%;
+    background-position-x: 45%;
+    background-repeat: no-repeat;
+    background-image: url(../resources/title-background.png);
 }
-
-h1{
-    margin: 0 auto;
-}
-
 h2 {
     margin-bottom: 0.8vw;
 }
-
-@keyframes {
-
-}
 .accounts_container{
-    margin-right: 1.5vw;
     font-size: 1.2em;
     position: absolute;
+    margin-right: 1.5vw;
     right: 0;
 }
 .login{
@@ -50,8 +42,8 @@ h2 {
 .login, .signup{
     display: inline-flex;
     text-decoration: none;
-    color: rgb(216, 217, 219);
     background-color: black;
+    color: rgb(216, 217, 219);
     padding: .30vw;
     border-radius: 7px;
     border: 1.5px solid rgb(114, 130, 137);
@@ -64,12 +56,14 @@ h2 {
     cursor: pointer;
 }
 main{
+    padding-bottom: 3vw;
     background-image: url(../resources/background.jpg);
-    /* background-size: 100%; */
+    background-size: 45.5%;
 }
 .section_title{
-    padding-top: 4vh;
+    padding-top: 1vw;
     text-align: center;
+    margin-bottom: 1vw;
     color: rgb(205, 205, 205);
 }
 .games {
@@ -77,7 +71,7 @@ main{
     flex-wrap: wrap;
     margin-left: 8vw;
     margin-right: 8vw;
-    padding-top: 1vw; 
+    padding-bottom: 1vw;
     justify-content: space-evenly;
     border-radius: 25px;
     background-image: url(../resources/background02.png);
@@ -88,26 +82,23 @@ img{
     display: flex;
     transition: all 400ms ease-in-out;
 }
-
 img:hover{
     transform: scale(105%);
 }
-
 .games article img {
-    border-radius: 15px;
+    border-radius: 5px;
 }
-
 p{
-    color: whitesmoke;
     display: flex;
     justify-content: center;
+    color: whitesmoke;
     margin-top: .5vw;
 }
-#lol, #valorant, #gta, #genshin, #counter, #minecraft, #fortnite{
+#lol, #valorant, #gta, #genshin, #counter, #minecraft, #fortnite, #warzone, #wow, #overwatch, #dota{
     width: 300px;
     height: 200px;
     box-sizing: border-box;
-    margin-top: 8vh;
+    margin-top: 6vh;
     display: flex;
     align-items: flex-end;
     font-weight: bold;
@@ -116,13 +107,34 @@ p{
     flex-basis: calc(33.33% - 10px);
 }
 @media only screen and (min-width:1600px){
-    #lol, #valorant, #gta, #genshin, #counter, #minecraft, #fortnite{
+    #lol, #valorant, #gta, #genshin, #counter, #minecraft, #fortnite, #warzone, #wow, #overwatch, #dota{
         flex-basis: calc(25% - 5px)
     }
 }
-/* #lol{
-    background-image: url(https://static-cdn.jtvnw.net/ttv-boxart/21779-188x250.jpg);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-} */
+.footer{
+    position: relative;
+    padding: 1vw 0 1vw 0;
+    background-color: rgb(22, 22, 22);
+}
+footer p{
+    margin-top: 0;
+    align-items: center;
+}
+footer a{
+    position: relative;
+    display: inline-flex;
+    text-decoration: none;
+    color: rgb(150, 223, 247);
+    left: 12.5px;
+
+}
+footer img{
+    position: relative;
+    height: 25px;
+    width: 25px;
+    left: 5px;
+    opacity: 77%;
+}
+footer p:nth-child(2){
+    margin-top: .25vw;
+}
