--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,10 @@ a{
     text-decoration: none;
 }
 header{
+    top: 0;
+    z-index: 1;
     display: flex;
+    position: sticky;
     align-items: center;
     background-size: contain;
     font-family: 'Tangerine', cursive;
