--- a/styles/games.css
+++ b/styles/games.css
@@ -112,6 +112,7 @@ article div{
 li{
     margin-left: 25px;
     font-weight: normal;
+    font-family: sans-serif;
 }
 @media only screen and (min-width:1450px){
     .groups{
