--- a/styles/index.css
+++ b/styles/index.css
@@ -148,3 +148,36 @@ footer img{
 footer p:nth-child(2){
     margin-top: .25vw;
 }
+@media only screen and (max-width: 700px){
+    header{
+        height: 20vw;
+        display: flex;
+        flex-direction: column;
+        position: static;
+    }
+    .title-container{
+        background: none;
+    }
+    
+    #Title{
+        background-color: black;
+    }
+    .accounts-container{
+        display: block;
+        position: static;
+        transform: scale(90%);
+        padding-bottom: .5vh;
+    }
+    #lol, #valorant, #gta, #genshin, #counter, #minecraft, #fortnite, #warzone, #wow, #overwatch, #dota{
+        margin-top: .5vh;
+    }
+    article img {
+        transform: scale(80%);
+    }
+    article img:hover{
+        transform: scale(85%);
+    }
+    article p.centrado{
+        margin-top: -2vh;
+    }
+}
