--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,12 +10,20 @@ body {
     padding: 0;
     background-image: url(../resources/background.jpg);
 }
-
+a{
+    text-decoration: none;
+}
 header {
     background-image: url(../resources/giphs/header-giph.gif);
     color: #ffffff;
     text-align: center;
     padding: 20px;
+}
+h1{
+    padding: 5px;
+    display: inline;
+    color: white;
+    background-color: black;
 }
 
 main {
@@ -57,6 +65,7 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: 100%;
 }
 
 .contact-info {
@@ -69,12 +78,15 @@ button {
 }
 
 footer {
-    background-image: url(../resources/giphs/header-giph.gif);
+    position: absolute;
     text-align: center;
     color: #fff;
     padding: 10px;
-    position: absolute;
-    bottom: 0;
     width: 100vw;
+    bottom: 0;
+    background-color: rgb(22, 22, 22);
 }
-@media only screen and (max-width: 700px;)    
+footer p{
+    display: inline;
+}
+/* @media only screen and (max-width: 700px;)     */
